Creating my quote detail component

--- a/Quotes/src/app/quote-details/quote-details.component.html
+++ b/Quotes/src/app/quote-details/quote-details.component.html
@@ -1,4 +1,4 @@
-<p>quote-details works!</p>
-<!-- <p>
-    {{quote.discription}}
-</p> -->
+<!-- <p>quote-details works!</p> -->
+<!-- <div>
+    {{quote.description}}
+</div> -->
