--- a/Quotes/src/app/navbar/navbar.component.html
+++ b/Quotes/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#HOME">HOME</a>
+                    <a class="nav-link active" aria-current="page" href="#">HOME</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">QUOTES</a>
