--- a/Quotes/src/app/quote/quote.component.css
+++ b/Quotes/src/app/quote/quote.component.css
@@ -1,3 +1,31 @@
+* {
+    box-sizing: border-box;
+}
+
 li {
-    list-style: none;
+    list-style: circle;
+}
+
+.container {
+    height: 85vh;
+    margin-top: 2px;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.75);
+    border-radius: 5px;
+    border-bottom: 2px solid black;
+}
+
+#HOME {
+    margin-top: 2%;
+}
+
+#name {
+    font-size: 20px;
+}
+
+#votes {
+    font-size: 18px;
+}
+
+#detail {
+    font-size: 18px;
 }
