--- a/Quotes/src/app/quote-details/quote-details.component.html
+++ b/Quotes/src/app/quote-details/quote-details.component.html
@@ -2,4 +2,4 @@
 <!-- <div>
     {{quote.description}}
 </div> -->
-<button (click)='quoteDelete(true)'>Delete</button>
+<button class="btn btn-danger btn-lg" (click)='quoteDelete(true)'>Delete</button>
