Creating highlighting directive

--- a/Quotes/src/app/quote-details/quote-details.component.html
+++ b/Quotes/src/app/quote-details/quote-details.component.html
@@ -1,5 +1,5 @@
-<!-- <p>quote-details works!</p> -->
 <!-- <div>
-    {{quote.description}}
+    {{quote.detail}}
 </div> -->
+<br>
 <button class="btn btn-danger btn-lg" (click)='quoteDelete(true)'>Delete</button>
