--- a/Quotes/src/app/quote/quote.component.css
+++ b/Quotes/src/app/quote/quote.component.css
@@ -4,10 +4,11 @@
 
 li {
     list-style: circle;
+    margin-top: 5px;
 }
 
 .container {
-    height: 85vh;
+    /* height: 85vh; */
     margin-top: 2px;
     box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.75);
     border-radius: 5px;
