--- a/Quotes/src/app/quote-form/quote-form.component.css
+++ b/Quotes/src/app/quote-form/quote-form.component.css
@@ -1,6 +1,11 @@
 .container-fluid {
-    height: 70vh;
+    height: 77vh;
     border-left: 2px solid black;
     border-right: 1px solid black;
     border-radius: 5px;
 }
+
+
+/* .pb-6 {
+    margin-top: -30%;
+} */
