making the form submit

--- a/Quotes/src/app/quote/quote.component.html
+++ b/Quotes/src/app/quote/quote.component.html
@@ -3,7 +3,7 @@
     <hr>
     <div class="row mt-3">
         <div class="col-5">
-            <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
+            <app-quote-form (addQuote)="addNewQuotes($event)"></app-quote-form>
         </div>
 
         <div class="col-7">
