Updating README.md

--- a/Quotes/src/app/quote/quote.component.html
+++ b/Quotes/src/app/quote/quote.component.html
@@ -20,7 +20,7 @@
                     <ng-template #unhighlight>
                         <p> <span id="votes">upvote; {{quote.upVote}} downvote; {{quote.downVote}} </span> Quote; <strong id="name">{{quote.name}}</strong></p>
                     </ng-template>
-                    <span id="detail"> Written by; <strong>{{quote.author}}</strong>,submitted by; {{quote.detail}}</span> on {{quote.date|date}}
+                    <span id="detail"> Written by; <strong>{{quote.author}}</strong> and submitted by; {{quote.detail}}</span> on {{quote.date|date}}
                 </li>
             </ul>
             <div class="">
