--- a/Quotes/src/app/quote-details/quote-details.component.html
+++ b/Quotes/src/app/quote-details/quote-details.component.html
@@ -1,5 +1,3 @@
-<!-- <div>
-    {{quote.detail}}
-</div> -->
+<!-- <p>{{quote.detail}}</p> -->
 <br>
 <button class="btn btn-danger btn-lg" (click)='quoteDelete(true)'>Delete</button>
