--- a/Quotes/src/app/quote/quote.component.html
+++ b/Quotes/src/app/quote/quote.component.html
@@ -23,10 +23,13 @@
                     <!-- <button (click)='toggleDetails(i)'>Toggle Details</button> -->
                     <span id="detail"> Written by; <strong>{{quote.author}}</strong> and submitted by; {{quote.detail}}</span> <br> Posted; <span id="date">{{quote.date|dateCount}}</span>
                 </li>
+                <p *ngIf='quotes.length > 5'>Today is a good day, quotes in the air 🧠 </p>
             </ul>
+
             <div class="">
                 <app-quote-details [quote]="quote" (isComplete)='deleteQuote($event,3)'></app-quote-details>
             </div>
+
         </div>
 
 
