--- a/Quotes/src/app/quote/quote.component.css
+++ b/Quotes/src/app/quote/quote.component.css
@@ -3,16 +3,16 @@
 }
 
 li {
-    list-style: circle;
+    list-style: none;
     margin-top: 7px;
 }
 
 .container {
-    height: 90vh;
+    /* height: 90vh; */
     margin-top: 2px;
     box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.75);
     border-radius: 5px;
-    border-bottom: 2px solid black;
+    border-bottom: none;
 }
 
 #HOME {
@@ -28,7 +28,9 @@ li {
 }
 
 #detail {
-    font-size: 18px;
+    font-size: 20px;
+    color: black;
+    font-weight: 900;
 }
 
 #date {
