--- a/Quotes/src/app/quote/quote.component.html
+++ b/Quotes/src/app/quote/quote.component.html
@@ -24,7 +24,10 @@
                     </ng-template>
 
                     <!-- <span id="votes">upvote; {{quote.upVote}} downvote; {{quote.downVote}} </span> -->
-                    <br> Author; <span id="detail">{{quote.author}} </span>and submitted by; <span id="detail">{{quote.detail}}</span> <br> Posted; <span id="date">{{quote.date|dateCount}}</span>
+
+
+                    <p id="description"> <br> Author; <span id="detail">{{quote.author}} </span>and submitted by; <span id="detail">{{quote.detail}}</span> <br> Posted; <span id="date">{{quote.date|dateCount}}</span></p>
+
                     <app-up-vote-down-vote>
 
                     </app-up-vote-down-vote>
